# stackme-desktop

./: .gitignore  README.md  SECURITY.md  next.config.mjs  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/app/: globals.css  layout.tsx  page.tsx
