[package]
name = "stackme-desktop"
version = "1.0.0"
description = "Stackme - Memory layer for AI applications - Desktop App"
authors = ["Stack AI"]
license = "Apache-2.0"
repository = ""
edition = "2021"
rust-version = "1.70"

[lib]
name = "stackme_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["devtools"] }
tauri-plugin-shell = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
urlencoding = "2.0"
log = "0.4"
env_logger = "0.11"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true